--- a/NavBar/nav.html
+++ b/NavBar/nav.html
@@ -20,6 +20,7 @@
                     <li><a href="#">Services</a> </li>
                     <li><a href="#">Project</a> </li>
                     <li><a href="#">About</a> </li>
+                    <li><a href="#">About</a> </li>
                 </ul>
                 <a class="cta" href="#"><button>Contact Us</button></a>
             </nav>
