--- a/HTML Course/Intro.html/AMAZON.html
+++ b/HTML Course/Intro.html/AMAZON.html
@@ -1,3 +1,5 @@
+
+
 <style>
 p.nike {
    font-weight: bold;
@@ -50,7 +52,7 @@ a{
 
 <a href="https://www.amazon.com/" target="_blank">Back to Amazon</a>
 <p  class="nike">
-Nike Black Running Shoes
+Mike Black Running Shoes
 </p>
 <p class="stock">
     $39 - in stock.
