--- a/Tusaale/index.html
+++ b/Tusaale/index.html
@@ -23,7 +23,9 @@
                     <h1>Please login to use platform</h1>
                 <form class="login-form">
                     <div class="form-item">
-
+                        <span class="form-item">Lock</span>
+                        <input type="text" placeholder="Enter your E-mail" required autofocus>
+                        <input type="password" placeholder="Enter your password" required>
                     </div>
                 </form>
 
