--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -6,10 +6,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="aside">
+        <div class="top">
+          <div class="logo">
+            <span class="material-icons-sharp"> face </span>
+            <div class="h2">Haa<span class="danger">jaa</span></div>
+          </div>
+          <div class="close" id="close-btn">
+            <span class="material-icons-sharp"> close </span>
+          </div>
+        </div>
+        <div class="sidebar">
+            <a href"#">
+                <span class="material-icons-sharp">
+                    grid_view
+                    </span>
+                    <h1>Dashboard</h1>
+            </a> <a href"#">
+                <span class="material-icons-sharp">
+                    person_outline
+                    </span>
+                    <h1>Customer</h1>
+            </a> <a href"#">
+                <span class="material-icons-sharp">
+                    receipt_long
+                    </span>
+                    <h1>Orders</h1>
+            </a> <a href"#">
+                <span class="material-icons-sharp">
+                    insights
+                    </span>
+                    <h1>Analytics</h1>
+            </a> <a href"#">
+                <span class="material-icons-sharp">
+                    mail_outline
+                    </span>
+                    <h1>Messages</h1>
+                    <span class="messages count">26</span>
+            </a> <a href"#">
+                <span class="material-icons-sharp">
+                    inventory
+                    </span>
+                    <h1>Products</h1>
+            </a> <a href"#">
+                <span class="material-icons-sharp">
+                    report_gmailerrorred
+                    </span>
+                    <h1>Reports</h1>
+            </a> <a href"#">
+                <span class="material-icons-sharp">
+                    settings
+                    </span>
+                    <h1>Settings</h1>
+            </a> <a href"#">
+                <span class="material-icons-sharp">
+                    add
+                    </span>
+                    <h1>Add Product</h1>
+            </a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
