My Own Practical Web

--- a/Own/index.html
+++ b/Own/index.html
@@ -19,6 +19,42 @@
         </ul>
       </div>
     </div>
+    <div class="guud">
+      <div class="kow">
+        <div>
+          <img src="Axmahaajir Cali.jpg" />
+        </div>
+        <div class="qodobka">
+          <h1>Maxaad ka taqaanaa Abdihajir Ali Abdinoor?</h1>
+          <p>
+            Sida kaaga muuqato sharciga ama aqoonsigan waxaa ku qoran Abdihajir
+            Ali Abdinoor. Sua'aasha ayaase ah waa kuma Abdihaajir Ali Abdinoor?
+          </p>
+          <p>
+            Abdihaajir Ali Abdinoor waa Soomaali ku dhashay dalka Kenya gaar
+            ahaan deegaanka Ismaamulka Mandera ee dalka Kenya. Abdihaajir waxaa
+            uu ka baxay dugsiga hoose dhexe iyo sarre ee MSS. Sidoo kale wuxuu
+            Bachlor iyo Master-kaba ka qaatay MIT oo Mareykanka ku taalo,
+            wuxuuna hada wax ka dhigaa isla jaamacada MIT ee Mareykanka.
+          </p>
+          <p>
+            Hadaba akhristow adigu intaas wax ka badan maka og tahay? Mase inala
+            wadaagi kartaa? Tusaale ahaan goorta goobta iy qaabta aad isku
+            barateen ama aad ku heshay macluumaadka aad inoo soo gudbineyso ee
+            isaga la halmaala? Ma aaminsan tahay inuu yahay Soomaali asal ah
+            mase waxaad u argtaa inuu yahay Ajnabi madama uuna wadanka ku
+            dhalan? Ma jeceshahay in aad inala wadaagto dhamaan weydiimahaasi?
+            Fadlan buuxi warqabadka hoose oo aanu ugu talo galnay in aay
+            bulshada inagula wadaagaan aragtidooda.
+          </p>
+          <p>Mahadsanid!</p>
+        </div>
+      </div>
+
+      <div class="labo">
+        <input type="text" placeholder="Baadi goob" />
+      </div>
+    </div>
     <div class="container"></div>
   </body>
 </html>
