--- a/HTML JS Projects/somali.com/Flexbox.html
+++ b/HTML JS Projects/somali.com/Flexbox.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <!-- <h1>Flexbox made simple</h1> -->
+      <!-- <h1>This is a straight forward simple to do flexbox</h1> -->
       <nav>
         <ul class="nav-list">
           <li><a href="#">Home</a></li>
